# RustyProbe

./: Cargo.toml  README.md
src/: assembler.rs  disassembler.rs  main.rs  utils.rs
src/utils/: data_address.rs  jumps.rs  one_op.rs  two_op.rs
